Re-colorized processors on Gantt chart, fixed further alignment issues. Added a font which I still need to integrate in the GUI.

--- a/src/gui/application.css
+++ b/src/gui/application.css
@@ -7,6 +7,12 @@
 	-fx-primary: #00A2D3;
 	
 }
+
+@font-face {
+    font-family: 'opensans';
+    src: url(resources/OpenSans-Regular.ttf);
+}
+
 .root {
 	-fx-background-color: -fx-base;
 	
@@ -14,6 +20,7 @@
 
 .label {
 	-fx-text-fill: -fx-primary;
+	-fx-font-family: "opensans";
 	
 	
 }
